General naming refactoring, added embeddings controller